WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281153
[JSC][Wasm] BBQJIT::addThrowRef is broken on armv7
https://bugs.webkit.org/show_bug.cgi?id=281153
Summary
[JSC][Wasm] BBQJIT::addThrowRef is broken on armv7
Max Rottenkolber
Reported
2024-10-09 11:02:58 PDT
addThrowRef doesn't follow the armv7 calling convention leading to the exception not being passed correctly. It's check for null exceptions is broken for armv7 as well.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-10-10 04:08:55 PDT
Committed
284964@main
(ca953b1fac8a): <
https://commits.webkit.org/284964@main
> Reviewed commits have been landed. Closing PR #34918 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-10-10 04:09:13 PDT
<
rdar://problem/137667390
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug