[JSC][Wasm] Fix BBQJIT::addThrowRef on armv7 https://bugs.webkit.org/show_bug.cgi?id=281153

Reviewed by Justin Michaud.

Split out implementations of BBQJIT::addThrowRef into WasmBBQJIT32_64.cpp anf WasmBBQJIT64.cpp

Add a armv7 implementation that works. (NB: A second 64 bit argument is passed in
GPRInfo::argumentGPR2, GPRInfo::argumentGPR3, and we check for null by comparing the high
tag word with JSValue::NullTag.

Also adds missing handling of register locations for slots in BBQJIT::emitCatchTableImpl.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJITImpl::BBQJIT::addThrowRef): Deleted.
* Source/JavaScriptCore/wasm/WasmBBQJIT32_64.cpp:
(JSC::Wasm::BBQJITImpl::BBQJIT::emitCatchTableImpl):
(JSC::Wasm::BBQJITImpl::BBQJIT::addThrowRef):
* Source/JavaScriptCore/wasm/WasmBBQJIT64.cpp:
(JSC::Wasm::BBQJITImpl::BBQJIT::addThrowRef):

Canonical link: https://commits.webkit.org/284964@main