Source/JavaScriptCore/wasm/WasmBBQJIT.cpp
@@ -3620,38 +3620,6 @@ PartialResult WARN_UNUSED_RETURN BBQJIT::addThrow(unsigned exceptionIndex, Argum
     return { };
 }
 
-PartialResult WARN_UNUSED_RETURN BBQJIT::addThrowRef(Value exception, Stack&)
-{
-
-    LOG_INSTRUCTION("ThrowRef", exception);
-
-    if constexpr (isARM_THUMB2())
-        emitMove(exception, Location::fromGPR2(wasmScratchGPR, GPRInfo::argumentGPR1));
-    else
-        emitMove(exception, Location::fromGPR(GPRInfo::argumentGPR1));
-    consume(exception);
-
-    ++m_callSiteIndex;
-    bool mayHaveExceptionHandlers = !m_hasExceptionHandlers || m_hasExceptionHandlers.value();
-    if (mayHaveExceptionHandlers) {
-        m_jit.store32(CCallHelpers::TrustedImm32(m_callSiteIndex), CCallHelpers::tagFor(CallFrameSlot::argumentCountIncludingThis));
-        flushRegisters();
-    }
-
-    // Check for a null exception
-    m_jit.move(CCallHelpers::TrustedImmPtr(JSValue::encode(jsNull())), wasmScratchGPR);
-    auto nullexn = m_jit.branchPtr(CCallHelpers::Equal, GPRInfo::argumentGPR1, wasmScratchGPR);
-
-    m_jit.move(GPRInfo::wasmContextInstancePointer, GPRInfo::argumentGPR0);
-    emitThrowRefImpl(m_jit);
-
-    nullexn.linkTo(m_jit.label(), &m_jit);
-
-    emitThrowException(ExceptionType::NullExnReference);
-
-    return { };
-}
-
 void BBQJIT::prepareForExceptions()
 {
     ++m_callSiteIndex;
